--- a/src/app/components/dashboard/ecommerce/ecommerce.component.html
+++ b/src/app/components/dashboard/ecommerce/ecommerce.component.html
@@ -29,7 +29,7 @@
       <app-goal-overview></app-goal-overview>
     </div>
     <div class="col-xl-4 col-lg-6 col-md-12 box-col-33">
-      <app-recent-activity></app-recent-activity>
+      <app-activity></app-activity>
     </div>
     <div class="col-xl-4 col-lg-6 col-md-12 box-col-28 xl-28">
       <app-order-statics></app-order-statics>
