--- a/src/app/components/ui-kits/tag-and-pills/tag-and-pills.component.html
+++ b/src/app/components/ui-kits/tag-and-pills/tag-and-pills.component.html
@@ -4,120 +4,61 @@
     <div class="col-sm-12 col-xl-6">
       <div class="card">
         <div class="card-header pb-0">
-          <h4>Badge Variations</h4>
+          <h4>Contextual variations</h4>
         </div>
-        <div class="card-body icon">
-          <span class="badge badge-primary">Primary</span><span class="badge badge-secondary">Secondary</span><span
-            class="badge badge-success">Success</span><span class="badge badge-info">Info</span><span
-            class="badge badge-warning text-dark">Warning</span><span class="badge badge-danger">Danger</span><span
-            class="badge badge-light text-dark">Light</span><span class="badge badge-dark tag-pills-sm-mb">Dark</span>
-          <div class="pt-4 pill-icon">
-            <a class="badge badge-primary" href="javascript:void(0)"><i data-feather="dollar-sign"></i></a><a
-              class="badge badge-secondary" href="javascript:void(0)"><i data-feather="headphones"></i></a><a
-              class="badge badge-success" href="javascript:void(0)"><i data-feather="link"></i></a><a
-              class="badge badge-info" href="javascript:void(0)"><i data-feather="github"></i></a><a
-              class="badge badge-warning text-dark" href="javascript:void(0)"><i data-feather="award"></i></a><a
-              class="badge badge-danger" href="javascript:void(0)"><i data-feather="activity"></i></a><a
-              class="badge badge-light text-dark" href="javascript:void(0)"><i data-feather="heart"></i></a><a
-              class="badge badge-dark" href="javascript:void(0)"></a><a class="badge badge-dark"
-              href="javascript:void(0)"><i data-feather="mail"></i></a>
-          </div>
-          <div class="pt-4 digits">
-            <a class="badge badge-primary" href="javascript:void(0)">1</a><a class="badge badge-secondary"
-              href="javascript:void(0)">2</a><a class="badge badge-success" href="javascript:void(0)">3</a><a
-              class="badge badge-info" href="javascript:void(0)">4</a><a class="badge badge-warning text-dark"
-              href="javascript:void(0)">5</a><a class="badge badge-danger" href="javascript:void(0)">6</a><a
-              class="badge badge-light text-dark" href="javascript:void(0)">7</a><a class="badge badge-dark"
-              href="javascript:void(0)">8</a>
-          </div>
-        </div>
+        <div class="card-body context"><span class="badge badge-primary">Primary</span><span class="badge badge-secondary">Secondary</span><span class="badge badge-success">Success</span><span class="badge badge-info">Info</span><span class="badge badge-warning">Warning</span><span class="badge badge-danger">Danger</span><span class="badge badge-light text-dark">Light</span><span class="badge badge-dark tag-pills-sm-mb">Dark</span></div>
       </div>
     </div>
     <div class="col-sm-12 col-xl-6">
       <div class="card">
         <div class="card-header pb-0">
+          <h4>Contextual variations</h4>
+        </div>
+        <div class="card-body context"><span class="badge rounded-pill badge-primary">Primary</span><span class="badge rounded-pill badge-secondary">Secondary</span><span class="badge rounded-pill badge-success">Success</span><span class="badge rounded-pill badge-info">Info</span><span class="badge rounded-pill badge-warning">Warning</span><span class="badge rounded-pill badge-danger">Danger</span><span class="badge rounded-pill badge-light text-dark">Light</span><span class="badge rounded-pill badge-dark tag-pills-sm-mb">Dark</span></div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-xl-6">
+      <div class="card">
+        <div class="card-header pb-0">
+          <h4>Tags with number</h4>
+        </div>
+        <div class="card-body digits"><a class="badge badge-primary" href="#">1</a><a class="badge badge-secondary" href="#">2</a><a class="badge badge-success" href="#">3</a><a class="badge badge-info" href="#">4</a><a class="badge badge-warning" href="#">5</a><a class="badge badge-danger" href="#">6</a><a class="badge badge-light text-dark" href="#">7</a><a class="badge badge-dark" href="#">8</a></div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-xl-6">
+      <div class="card">
+        <div class="card-header pb-0">
+          <h4>Pills with number</h4>
+        </div>
+        <div class="card-body digits"><span class="badge rounded-pill badge-primary">1</span><span class="badge rounded-pill badge-secondary">2</span><span class="badge rounded-pill badge-success">3</span><span class="badge rounded-pill badge-info">4</span><span class="badge rounded-pill badge-warning">5</span><span class="badge rounded-pill badge-danger">6</span><span class="badge rounded-pill badge-light text-dark">7</span><span class="badge rounded-pill badge-dark">8</span></div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-xl-4">
+      <div class="card">
+        <div class="card-header pb-0">
           <h4>Basic Tags</h4>
         </div>
-        <div class="card-body icon">
-          <span class="badge rounded-pill badge-primary">Primary</span><span
-            class="badge rounded-pill badge-secondary">Secondary</span><span
-            class="badge rounded-pill badge-success">Success</span><span
-            class="badge rounded-pill badge-info">Info</span><span
-            class="badge rounded-pill badge-warning text-dark">Warning</span><span
-            class="badge rounded-pill badge-danger">Danger</span><span
-            class="badge rounded-pill badge-light text-dark">Light</span><span
-            class="badge rounded-pill badge-dark tag-pills-sm-mb">Dark</span>
-          <div class="pt-4 pill-icon">
-            <a class="badge rounded-pill badge-primary" href="javascript:void(0)"><i
-                data-feather="dollar-sign"></i></a><a class="badge rounded-pill badge-secondary"
-              href="javascript:void(0)"><i data-feather="headphones"></i></a><a class="badge rounded-pill badge-success"
-              href="javascript:void(0)"><i data-feather="link"></i></a><a class="badge rounded-pill badge-info"
-              href="javascript:void(0)"><i data-feather="github"></i></a><a
-              class="badge rounded-pill badge-warning text-dark" href="javascript:void(0)"><i
-                data-feather="award"></i></a><a class="badge rounded-pill badge-danger" href="javascript:void(0)"><i
-                data-feather="activity"></i></a><a class="badge rounded-pill badge-light text-dark"
-              href="javascript:void(0)"><i data-feather="heart"></i></a><a class="badge rounded-pill badge-dark"
-              href="javascript:void(0)"><i data-feather="mail"></i></a>
-          </div>
-          <div class="pt-4 digits">
-            <span class="badge rounded-pill badge-primary">1</span><span
-              class="badge rounded-pill badge-secondary">2</span><span
-              class="badge rounded-pill badge-success">3</span><span class="badge rounded-pill badge-info">4</span><span
-              class="badge rounded-pill badge-warning text-dark">5</span><span
-              class="badge rounded-pill badge-danger">6</span><span
-              class="badge rounded-pill badge-light text-dark">7</span><span
-              class="badge rounded-pill badge-dark">8</span>
-          </div>
-        </div>
+        <div class="card-body basic-icontag"><a class="badge badge-light-primary rounded-pill" href="#"><i data-feather="check-circle"></i></a><a class="badge badge-light-secondary rounded-pill" href="#"><i data-feather="truck"></i></a><a class="badge badge-light-success rounded-pill" href="#"><i data-feather="send"></i></a><a class="badge badge-light-info rounded-pill" href="#"><i data-feather="trash"></i></a><a class="badge badge-light-warning rounded-pill" href="#"><i data-feather="award"></i></a><a class="badge badge-light-danger rounded-pill" href="#"><i data-feather="activity"></i></a><a class="badge badge-light-dark rounded-pill" href="#"><i data-feather="mail"></i></a></div>
       </div>
     </div>
-    <div class="col-sm-12 col-xl-6">
-      <div class="card height-equal badges-as-part-buttons">
+    <div class="col-sm-12 col-xl-4">
+      <div class="card">
         <div class="card-header pb-0">
-          <h4>Badges as part buttons</h4>
+          <h4>Tags With icon</h4>
         </div>
-        <div class="card-body">
-          <div class="mb-3">
-            <button class="btn btn-primary" type="button">
-              <span>Messages </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="mail"></i></span>
-            </button>
-          </div>
-          <div class="mb-3">
-            <button class="btn btn-secondary" type="button">
-              <span>notifications </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="bell"></i></span>
-            </button>
-          </div>
-          <div class="mb-3">
-            <button class="btn btn-success" type="button">
-              <span>Update available </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="settings"></i></span>
-            </button>
-          </div>
-          <div class="mb-3">
-            <button class="btn btn-info" type="button">
-              <span>Playing Now </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="music"></i></span>
-            </button>
-          </div>
-          <div class="mb-3">
-            <button class="btn btn-warning" type="button">
-              <span>1.2 GB Used </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="alert-triangle"></i></span>
-            </button>
-          </div>
-          <div>
-            <button class="btn btn-danger" type="button">
-              <span>Alert </span><span class="badge rounded-pill badge-light text-dark"><i
-                  data-feather="alert-circle"></i></span>
-            </button>
-          </div>
+        <div class="card-body icon"><a class="badge badge-primary" href="#"><i data-feather="dollar-sign"></i></a><a class="badge badge-secondary" href="#"><i data-feather="headphones"></i></a><a class="badge badge-success" href="#"><i data-feather="link"></i></a><a class="badge badge-info" href="#"><i data-feather="github"></i></a><a class="badge badge-warning" href="#"><i data-feather="award"></i></a><a class="badge badge-danger" href="#"><i data-feather="activity"></i></a><a class="badge badge-light text-dark" href="#"><i data-feather="heart"></i></a><a class="badge badge-dark" href="#"><i data-feather="mail"></i></a></div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-xl-4">
+      <div class="card">
+        <div class="card-header pb-0">
+          <h4>Pills with Icon</h4>
         </div>
+        <div class="card-body icon"><a class="badge rounded-pill badge-primary" href="#"><i data-feather="dollar-sign"></i></a><a class="badge rounded-pill badge-secondary" href="#"><i data-feather="headphones"></i></a><a class="badge rounded-pill badge-success" href="#"><i data-feather="link"></i></a><a class="badge rounded-pill badge-info" href="#"><i data-feather="github"></i></a><a class="badge rounded-pill badge-warning" href="#"><i data-feather="award"></i></a><a class="badge rounded-pill badge-danger" href="#"><i data-feather="activity"></i></a><a class="badge rounded-pill badge-light text-dark" href="#"><i data-feather="heart"></i></a><a class="badge rounded-pill badge-dark" href="#"><i data-feather="mail"></i></a></div>
       </div>
     </div>
     <div class="col-sm-12 col-xl-6">
-      <div class="card height-equal badges-example-sec">
+      <div class="card height-equal">
         <div class="card-header pb-0">
           <h4>Badges Example</h4>
         </div>
@@ -129,6 +70,27 @@
           <h5>heading <span class="badge badge-primary">New</span></h5>
           <h6>heading <span class="badge badge-primary">New</span></h6>
         </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-xl-6">
+      <div class="card height-equal">
+        <div class="card-header pb-0">
+          <h4>Badges as part buttons</h4>
+        </div>
+        <div class="card-body">
+          <div class="mb-3">
+            <button class="btn btn-primary" type="button">Messages <span class="badge rounded-pill badge-light text-dark"><i data-feather="mail"></i></span></button>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-secondary" type="button">notifications <span class="badge rounded-pill badge-light text-dark"><i data-feather="bell"></i></span></button>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-success" type="button">Update available <span class="badge rounded-pill badge-light text-dark"><i data-feather="settings"></i></span></button>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-info" type="button">Playing Now <span class="badge rounded-pill badge-light text-dark"><i data-feather="music"></i></span></button>
+          </div>
+         </div>
       </div>
     </div>
   </div>
