--- a/src/app/shared/components/header/search/search.component.html
+++ b/src/app/shared/components/header/search/search.component.html
@@ -1,5 +1,5 @@
   <li>
-    <div class="right-header ps-0">
+    <div class="right-header ps-0 search-header-item">
   <div class="input-group">
     <div class="input-group-prepend">
       <span class="input-group-text mobile-search" 
