--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -22,6 +22,9 @@ th {
     color: $danger-color;
   }
 }
+.table > :not(caption) > * > * {
+  background-color: transparent;
+}
 .table {
   margin-bottom: $table-b-margin;
   > :not(:last-child) {
