--- a/src/assets/scss/layout/_box-layout.scss
+++ b/src/assets/scss/layout/_box-layout.scss
@@ -114,6 +114,9 @@
         }
       }
     }
+    .search-header-item{
+      display: none;
+    }
     .basic-cards{
       .custom-profile{
         .card-body{
