--- a/src/assets/scss/themes/_dark.scss
+++ b/src/assets/scss/themes/_dark.scss
@@ -13,6 +13,7 @@ body {
   &.dark-only {
     color: $dark-all-font-color;
     background-color: $dark-body-background;
+    --bs-body-color: rgba(255, 255, 255, 0.8);
     .employee-status .d-flex .flex-grow-1 h5 a{
       color: $dark-all-font-color;
     }
@@ -35,6 +36,9 @@ body {
           background-color: $dark-card-background;
         }
       } 
+    }
+    .table-light{
+      background-color: $white;
     }
     .fc-theme-standard .fc-scrollgrid{
       border: 1px solid $dark-card-border;
