--- a/src/assets/scss/themes/_responsive.scss
+++ b/src/assets/scss/themes/_responsive.scss
@@ -4848,6 +4848,9 @@
   }
 }
 @media only screen and (max-width: 575px) { 
+  .serchinput {
+    padding: 1px 8px;
+  }  
   .vertical-tab {
     .nav-tabs {
       width: 100%;
