--- a/src/app/components/search-website/all/all.component.html
+++ b/src/app/components/search-website/all/all.component.html
@@ -32,7 +32,7 @@
     </div>
     <div class="col-xl-6 box-col-6 search-banner">
       <div class="card">
-        <div class="blog-box blog-shadow bg-size" style="background-image: url(&quot;../assets/images/blog/blog.jpg&quot;); background-size: cover; background-position: center center; display: block;"><img class="img-fluid bg-img-cover" src="../assets/images/blog/blog.jpg" alt="" style="display: none;">
+        <div class="blog-box blog-shadow bg-size" style="background-image: url(&quot;assets/images/blog/blog.jpg&quot;); background-size: cover; background-position: center center; display: block;"><img class="img-fluid bg-img-cover" src="assets/images/blog/blog.jpg" alt="" style="display: none;">
           <div class="blog-details">
             <p class="digits">25 July 2022</p>
             <h4>Huge part of it is the incomparable beauty you can encounter every day.</h4>
